--- a/ruby/hermez/app/views/layouts/_navigation.html.haml
+++ b/ruby/hermez/app/views/layouts/_navigation.html.haml
@@ -2,12 +2,9 @@
 .container
   %nav.navbar.navbar-dark.bg-inverse
     %ul.nav.navbar-nav.clearfix
-      %li.nav-item.row{style: "background: white;"}
-        .col-md-3
-          = link_to("Hermez", root_path, {style:"font-weight: bold; font-size: 35px; color: black; font-family: sans-serif;"})            
-        .col-md-4{style: "text-align: center;"}
-          = link_to("Add New Person", cadet_path, {style:"font-weight: bold; font-size: 35px; color: black; font-family: sans-serif;"})
-        %button.btn.btn-link.text-danger.col-md-3.js_clear_list{style:"font-size: 30px; font-weight: bold;"}
-          Clear List
+      %li.nav-item.row{style: "background: white;"}        
+        = link_to("Hermez", root_path, {class: "btn btn-link col-md-3", style: "font-size: 30px; font-weight: bold; color: black;"})            
+        = link_to("Add New Person", cadet_path, {class: "btn btn-link col-md-4", style: "font-size: 30px; font-weight: bold; color: black;"})
+        = link_to("Clear List", 'snail_mail/clear_list', {class: "btn btn-link text-danger col-md-3", style: "font-size: 30px; font-weight: bold;"})          
         %button.btn.btn-link.text-primary.col-md-2.js_send{style:"font-size: 30px; font-weight: bold;"}
           Send
