--- a/ruby/hermez/app/views/cadet/new.html.haml
+++ b/ruby/hermez/app/views/cadet/new.html.haml
@@ -5,9 +5,13 @@
   %br
   .row
     = form_for :cadet, :url => {:controller => 'cadet', :action => 'import_cadets_fremont'} do |f|      
-        
-      = submit_tag :import, class: "btn btn-primary"
-      = label_tag :cadet_name, "This will take a while (3-5 minutes) please be patient...", style: "font-weight: bold;"
+      
+      .it-hidden{style: "display: none;"}
+        %img(src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif")
+      .row
+        = submit_tag :import, class: "btn btn-primary",  onclick: "$('.it-hidden').show()"
+        = label_tag :cadet_name, "This will take a while (5-10 minutes) please be patient...", style: "font-weight: bold; margin-left: 5px;"
+
 
   %br
   %br
@@ -18,7 +22,11 @@
   %br
   .row
     = form_for :cadet, :url => {:controller => 'cadet', :action => 'create'} do |f|      
-      
+      = label_tag :cadet_piscine, "Pisciner?"
+      .input-group
+        = f.select(:piscine, ["yes", "no"], class: "form-control")
+
+      %br
       = label_tag :cadet_name, "Full Name"
       .input-group
         = text_field_tag :name, "", placeholder: "Xavier Niel", class: "form-control"
