--- a/ruby/hermez/app/views/snail_mail/index.html.haml
+++ b/ruby/hermez/app/views/snail_mail/index.html.haml
@@ -1,6 +1,8 @@
-.container
-  .row         
-    %input.col-12{type: "text", placeholder: "Search for name...", style: "height: 60px; font-size: 22px;"}            
+.container  
+  = form_for_filterrific @filterrific do |f| 
+    .row
+      = text_field :search_query, "", placeholder: "Search for name...", class: "col-12 filterrific-periodically-observed", style: "height: 60px; font-size: 22px;", autofocus: true
+  %br        
   %br        
   .row
     .col-6
@@ -10,18 +12,11 @@
 
 
       %ul.list-group
-        -@cadets.each do |elem|
-          = form_for :list, :url => {:controller => 'snail_mail', :action => 'select_cadet'} do |f|      
-            %li.list-group-item
-              .input-group
-                = hidden_field_tag :cadet_login, "", value: "#{elem.login}", class: "form-control hidden"
-              .col-9
-                = "#{elem.name} | #{elem.login}"
-              = submit_tag :submit, class: "submit col-3"
+        = render "snail_mail/cadets_results"
 
     .col-6
       %h2.txt_center
-        Selected Cadets
+        = "Selected Cadets (#{@selected_cadets.count})"
       %ul.list-group
         -@selected_cadets.each do |elem|
           = form_for :list, :url => {:controller => 'snail_mail', :action => 'deselect_cadet'} do |f|      
@@ -32,10 +27,7 @@
                 = "#{elem.name} | #{elem.login}"
               = submit_tag :remove, class: "submit btn-danger col-3"
   
-:javascript
-    $(document).ready( function() {      
-    
-    } );
+
 
 
 
