--- a/app/views/snail_mail/index.html.haml
+++ b/app/views/snail_mail/index.html.haml
@@ -27,7 +27,7 @@
                 .col-auto
                   = "#{elem.name} ———"
                   = "#{elem.login}"
-                = submit_tag :remove, class: "submit btn-danger col-auto"
+                = submit_tag :-, class: "submit btn-danger col-auto"
   
 
 
